Combobox functionality, quick draw & more speed improvements.